objects/custom_object4__c.object
<CustomObject>
    <fields>
        <fullName>field1__c</fullName>
        <label>field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>custom_object4</label>
    <nameField>
        <label>custom_object3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom_object4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>